# ffi

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README  README.md  _memcpy.h  appveyor.yml  ffi.c  ffi.q  k.h  nuget.config  packages.config  test.c  test.q  test_ffi.q  test_win.q  travis_setup.sh
docs/: examples.md  index.md  install.md  reference.md
examples/: README.md  c_api.q  pcre.q  rmath.q  rmathlib.q  stdlib.q
examples/pcre/: README.md  pcre.q  pcre_test.q
examples/rmath/: README.md  rmath.q  rmath_test.q
q/: ffi.q  setldpath.sh
src/: CMakeLists.txt  ffi.c
tests/: test_ffi.q  test_ffi.t  test_win.q
tests_win/: test_win.t
tmp_stash/: CONTRIBUTING.md  Makefile
tmp_stash/win/vcpkg/info/: libffi_3.1-1_x64-windows-static.list
tmp_stash/win/x64-windows-static/debug/lib/: dl.lib
tmp_stash/win/x64-windows-static/lib/: dl.lib
tmp_stash/win/x64-windows-static/share/dlfcn-win32/: dlfcn-win32-targets.cmake
tmp_stash/win/x86-windows-static/debug/lib/: libffi.lib
tmp_stash/win/x86-windows-static/include/: ffi.h
tmp_stash/win/x86-windows-static/lib/: dl.lib
tmp_stash/win/x86-windows-static/share/dlfcn-win32/: dlfcn-win32-targets-debug.cmake  dlfcn-win32-targets-release.cmake
travis_win/libffi/install/include/: ffi.h
travis_win/libffi/install/lib/: libffi.la
travis_win/libffi/install/lib/pkgconfig/: libffi.pc
win/: Makefile
win/vcpkg/info/: dlfcn-win32_1.1.1-1_x64-windows-static.list  dlfcn-win32_1.1.1-1_x86-windows-static.list  libffi_3.1-1_x86-windows-static.list
win/x64-windows-static/debug/lib/: dl.lib  libffi.lib
win/x64-windows-static/include/: ffi.h
win/x64-windows-static/lib/: dl.lib  libffi.lib
win/x86-windows-static/debug/lib/: dl.lib
win/x86-windows-static/lib/: libffi.lib
win/x86-windows-static/share/dlfcn-win32/: dlfcn-win32-config.cmake
